# rust-study

./: .gitignore  Cargo.toml
chrono_panic_poc/: Cargo.toml
chrono_panic_poc/src/: main.rs
clap_panic_poc/: Cargo.toml
clap_panic_poc/src/: main.rs
docs/: decrusting_the_axum_crate.md  graphql_in_action.md  programming_rust.md  rust_for_rustaceans.md  rust_in_action.md  rust_web_development.md  the_rust_programming_language.md
httpie/: Cargo.toml
httpie/src/: main.rs
ldap_client_poc/: Cargo.toml
ldap_client_poc/src/: cli.rs  main.rs
leetcode/: Cargo.toml
leetcode/src/: lib.rs  main.rs
leetcode/src/array/: two_sum.rs
lifetimes_poc/: Cargo.toml
lifetimes_poc/src/: lib.rs
pipe_poc/: Cargo.toml
pipe_poc/src/: main.rs
samples/: Cargo.toml
samples/src/: lib.rs
scrabble/src/: main.rs
smart_pointers_poc/: Cargo.toml
smart_pointers_poc/src/: cell.rs  lib.rs  refcell.rs
sqlx_migration_poc/: Cargo.toml  Makefile  docker-compose.yml  localdev.env
sqlx_migration_poc/benches/: sqlx_migration_poc.rs
sqlx_migration_poc/db/migrations/: 20230824231310_initial_schema.sql
sqlx_migration_poc/src/: db.rs  error.rs  lib.rs  main.rs
sqlx_migration_poc/src/endpoints/: mod.rs  test_run.rs
sqlx_migration_poc/src/schema/: mod.rs  test_run.rs
src/: main.rs
zookeeper_client_poc/: Cargo.toml  Makefile  compose.yaml
zookeeper_client_poc/src/: main.rs
