[workspace]
resolver = "2"

members = [
    "chrono_panic_poc",
    "clap_panic_poc",
    "httpie",
    "leetcode",
    "lifetimes_poc",
    "pipe_poc",
    "samples",
    "scrabble",
    "smart_pointers_poc",
    "sqlx_migration_poc",
]

[workspace.dependencies]
axum = "0.7.4"
clap = { version = "3.2.25" }
chrono = { version = "0.4.26", default-features = false }
serde = { version = "1.0.183", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] }
