[package]
name = "sqlx_migration_poc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true }
sql-builder = "3.1.1"
sqlx = { version = "0.7.1", features = ["runtime-tokio", "postgres", "tls-rustls", "migrate", "chrono", "uuid"] }
thiserror = "1.0.47"
tokio = { workspace = true }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["ansi", "json", "env-filter"] }
uuid = { version = "1.4.1", features = ["serde"] }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["async_tokio"] }

[[bench]]
name = "sqlx_migration_poc"
harness = false
